# credit_card_approval

./: .gitignore  LICENSE  MODEL_SUMMARY_REPORT.md  Makefile  QUICKSTART.md  README.md  UPGRADE_COMPLETE.md  UPGRADE_QUICKSTART_V2.md  V4_FINAL_DELIVERY_SUMMARY.md  pyproject.toml  requirements.txt
credit_card_approval/: pipeline.py  pipeline_v2.py  pipeline_v3.py  pipeline_v4.py
docs/: FEATURE_ENGINEERING_V3.md  PIPELINE_DOCUMENTATION.md  UPGRADE_SUMMARY_V2.md  V4_PRODUCTION_READY.md  mkdocs.yml
docs/docs/: index.md
notebooks/: credit_scoring_pipeline.ipynb
