[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_card_approval"
version = "0.0.1"
description = "Machine Learning model to predict if an applicant is 'good' or 'bad' client."
authors = [
  { name = "OKUMA, Gabriel. Data Scientist." },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["credit_card_approval"]
include = ["pyproject.toml", "credit_card_approval/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_card_approval"]
force-sort-within-sections = true

